--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,31 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Activities</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Score value</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% if current_user.admin? %>
+  <%= link_to 'New Activity', new_activity_path %>
+<% end %>  
 
-  <tbody>
-    <% @activities.each do |activity| %>
-      <tr>
-        <td><%= activity.name %></td>
-        <td><%= activity.description %></td>
-        <td><%= activity.score_value %></td>
-        <td><%= link_to 'Show', activity %></td>
-        <td><%= link_to 'Edit', edit_activity_path(activity) %></td>
-        <td><%= link_to 'Destroy', activity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  
+<%= render 'activities_list' %>
 
-<br>
-
-<%= link_to 'New Activity', new_activity_path %>
+  
