Allow manage of users and thier details

--- a/app/views/activities/user_index.html.erb
+++ b/app/views/activities/user_index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Activities assigned to you</h1>
+<h1>Activities assigned to <%= current_user.first_name %> </h1>
 
 <h4>Score: <%= current_user.total_score %> </h4>
 
